feat: implement client creation and login functionality with password hashing

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-DB_HOST=10.10.0.2 
-DB_USER=youruser
+DB_HOST=10.10.0.2
+DB_USER=gmail-app
 DB_PASSWORD=yourpassword
-DB_NAME=yourdbname
+DB_PORT=5432
+DB_NAME=gmail-app
 DB_SSLMODE=disable
 DB_TIMEZONE=America/Sao_Paulo
 MIGRATIONS_PATH=database/migrations
